--- a/Step_1_Create_Python_Script.ipynb
+++ b/Step_1_Create_Python_Script.ipynb
@@ -80,8 +80,8 @@
     "        except Exception as e:\n",
     "            raise ValueError(\"Could not Initialise the network. Have you enterred the correct model path?\")\n",
     "\n",
-    "        self.input_name=next(iter(self.model.inputs))\n",
-    "        self.input_shape=self.model.inputs[self.input_name].shape\n",
+    "        self.input_name=next(iter(self.model.inputs)) #input_layer\n",
+    "        self.input_shape=self.model.inputs[self.input_name].shape \n",
     "        self.output_name=next(iter(self.model.outputs))\n",
     "        self.output_shape=self.model.outputs[self.output_name].shape\n",
     "\n",
@@ -100,7 +100,9 @@
     "    '''\n",
     "    TODO: This method needs to be completed by you\n",
     "    ''' \n",
-    "        \n",
+    "        coords = []\n",
+    "\n",
+    "\n",
     "        return coords, image\n",
     "    \n",
     "    def draw_outputs(self, coords, image):\n",
@@ -119,8 +121,11 @@
     "    '''\n",
     "    TODO: This method needs to be completed by you\n",
     "    '''\n",
-    "        raise NotImplementedError\n",
+    "        pr_image = cv2.resize(image, (self.input_shape[3], self.input_shape[2]))\n",
+    "        pr_image = pr_image.transpose((2,0,1)) #transpose layout from HWC to CHW\n",
+    "        pr_image = pr_image.reshape(1, *pr_image.shape)\n",
     "\n",
+    "        return pr_image\n",
     "\n",
     "def main(args):\n",
     "    model=args.model\n",
