refactor: predict func edited
predict function edited
included input_dict

--- a/Step_1_Create_Python_Script.ipynb
+++ b/Step_1_Create_Python_Script.ipynb
@@ -74,6 +74,7 @@
     "        self.model_structure=model_name+'.xml'\n",
     "        self.device=device\n",
     "        self.threshold=threshold\n",
+    "        self.net = None\n",
     "\n",
     "        try:\n",
     "            self.model=IENetwork(self.model_structure, self.model_weights)\n",
@@ -86,13 +87,12 @@
     "        self.output_shape=self.model.outputs[self.output_name].shape\n",
     "\n",
     "    def load_model(self):\n",
-    "        \n",
     "    '''\n",
     "    TODO: This method needs to be completed by you\n",
     "    ''' \n",
     "        core = IECore()\n",
-    "        self.exec_network = core.load_network(network=self.model, device_name=self.device, num_requests=1)\n",
-    "        \n",
+    "        self.net = core.load_network(network=self.model, device_name=self.device, num_requests=1)\n",
+    "\n",
     "        return\n",
     "    \n",
     "        \n",
@@ -100,15 +100,22 @@
     "    '''\n",
     "    TODO: This method needs to be completed by you\n",
     "    ''' \n",
-    "        coords = []\n",
+    "        pr_image = cv2.resize(image, (self.input_shape[3], self.input_shape[2]))\n",
+    "        pr_image = pr_image.transpose((2,0,1)) #transpose layout from HWC to CHW\n",
+    "        pr_image = pr_image.reshape(1, *pr_image.shape)\n",
     "\n",
-    "\n",
+    "        input_dict={self.input_name:pr_image}\n",
+    "        \n",
     "        return coords, image\n",
     "    \n",
     "    def draw_outputs(self, coords, image):\n",
     "    '''\n",
     "    TODO: This method needs to be completed by you\n",
     "    '''\n",
+    "        data = \n",
+    "        for  box in coords:\n",
+    "\n",
+    "\n",
     "        raise NotImplementedError\n",
     "\n",
     "    def preprocess_outputs(self, outputs):\n",
