refactor: predict func
predict function modified, return coords and pr_image

--- a/Step_1_Create_Python_Script.ipynb
+++ b/Step_1_Create_Python_Script.ipynb
@@ -100,23 +100,33 @@
     "    '''\n",
     "    TODO: This method needs to be completed by you\n",
     "    ''' \n",
-    "        pr_image = cv2.resize(image, (self.input_shape[3], self.input_shape[2]))\n",
-    "        pr_image = pr_image.transpose((2,0,1)) #transpose layout from HWC to CHW\n",
-    "        pr_image = pr_image.reshape(1, *pr_image.shape)\n",
-    "\n",
+    "        ih, iw = image.shape[:-1]\n",
+    "        pr_image = preprocess_input(image)\n",
     "        input_dict={self.input_name:pr_image}\n",
-    "        \n",
-    "        return coords, image\n",
+    "        res = self.net.infer(input_dict)\n",
+    "        res = res[self.output_name]\n",
+    "        data = res[0][0]\n",
+    "        coords = []\n",
+    "        for number, proposal in enumerate(data):\n",
+    "            if proposal[2] > 0.5:\n",
+    "                image_id = np.int(proposal[0])\n",
+    "                lable = proposal[1]\n",
+    "                confidence = proposal[2]\n",
+    "                xmin = np.int(iw * proposal[3])\n",
+    "                ymin = np.int(ih * proposal[4])\n",
+    "                xmax = np.int(iw * proposal[5])\n",
+    "                ymax = np.int(ih * proposal[6])\n",
+    "                coords.append([xmin, ymin, xmax, ymax])\n",
+    "\n",
+    "        return coords, pr_image\n",
     "    \n",
     "    def draw_outputs(self, coords, image):\n",
     "    '''\n",
     "    TODO: This method needs to be completed by you\n",
     "    '''\n",
-    "        data = \n",
-    "        for  box in coords:\n",
-    "\n",
-    "\n",
-    "        raise NotImplementedError\n",
+    "        for coord in coords:\n",
+    "                cv.rectangle(image, (coord[0], coord[1]), (coord[2], coord[3]), (232, 35, 244), 2)\n",
+    "        return image\n",
     "\n",
     "    def preprocess_outputs(self, outputs):\n",
     "    '''\n",
@@ -179,7 +189,7 @@
     "                break\n",
     "            counter+=1\n",
     "            \n",
-    "            coords, image= pd.predict(frame)\n",
+    "            coords, classes, image= pd.predict(frame)\n",
     "            num_people= queue.check_coords(coords)\n",
     "            print(f\"Total People in frame = {len(coords)}\")\n",
     "            print(f\"Number of people in queue = {num_people}\")\n",
