refactor: Completed Notebooks
updated functions load_model, predict, draw_outputs and preprocess_inputs for Python Script
updated Job submission script with appropriate MODEL,DEVICE,VIDEO,QUEUE,OUTPUT and PEOPLE variables
updated Manufacturing Senario with job scripts for CPU, IGPU, VPU and FPGA respectively
executed all and extracted all expected results
updated the proposal template with information for Manufacturaing scenario

--- a/Step_1_Create_Python_Script.ipynb
+++ b/Step_1_Create_Python_Script.ipynb
@@ -24,9 +24,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting person_detect.py\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile person_detect.py\n",
     "\n",
@@ -37,7 +45,7 @@
     "import cv2\n",
     "import argparse\n",
     "import sys\n",
-    "\n",
+    "import logging as log\n",
     "\n",
     "class Queue:\n",
     "    '''\n",
@@ -75,74 +83,80 @@
     "        self.device=device\n",
     "        self.threshold=threshold\n",
     "        self.net = None\n",
-    "\n",
+    "        \n",
     "        try:\n",
+    "            log.info(\"Set model with network files:\\n\\t{}\\n\\t{}\".format(self.model_structure, self.model_weights))\n",
     "            self.model=IENetwork(self.model_structure, self.model_weights)\n",
     "        except Exception as e:\n",
     "            raise ValueError(\"Could not Initialise the network. Have you enterred the correct model path?\")\n",
     "\n",
-    "        self.input_name=next(iter(self.model.inputs)) #input_layer\n",
-    "        self.input_shape=self.model.inputs[self.input_name].shape \n",
+    "        self.input_name=next(iter(self.model.inputs))\n",
+    "        self.input_shape=self.model.inputs[self.input_name].shape\n",
     "        self.output_name=next(iter(self.model.outputs))\n",
     "        self.output_shape=self.model.outputs[self.output_name].shape\n",
     "\n",
     "    def load_model(self):\n",
-    "    '''\n",
-    "    TODO: This method needs to be completed by you\n",
-    "    ''' \n",
+    "        '''\n",
+    "        TODO: This method needs to be completed by you\n",
+    "        '''\n",
+    "        print(\"Initilising IECore plugin\")\n",
     "        core = IECore()\n",
+    "        print(\"Loading plugin with model\")\n",
     "        self.net = core.load_network(network=self.model, device_name=self.device, num_requests=1)\n",
-    "\n",
+    "        print(\"Sucessful loading plugin with model\")\n",
     "        return\n",
     "    \n",
-    "        \n",
-    "    def predict(self, image):\n",
-    "    '''\n",
-    "    TODO: This method needs to be completed by you\n",
-    "    ''' \n",
-    "        ih, iw = image.shape[:-1]\n",
-    "        pr_image = preprocess_input(image)\n",
-    "        input_dict={self.input_name:pr_image}\n",
+    "    def predict(self, image, initial_w, initial_h):\n",
+    "        '''\n",
+    "        TODO: This method needs to be completed by you\n",
+    "        '''        \n",
+    "        input_dict={self.input_name:image}\n",
+    "        print(\"Start infer\")\n",
     "        res = self.net.infer(input_dict)\n",
+    "        print(\"Inference sucessful\")\n",
     "        res = res[self.output_name]\n",
     "        data = res[0][0]\n",
     "        coords = []\n",
+    "        print(\"Getting coords\")\n",
     "        for number, proposal in enumerate(data):\n",
-    "            if proposal[2] > 0.5:\n",
+    "            if proposal[2] > self.threshold:\n",
     "                image_id = np.int(proposal[0])\n",
     "                lable = proposal[1]\n",
     "                confidence = proposal[2]\n",
-    "                xmin = np.int(iw * proposal[3])\n",
-    "                ymin = np.int(ih * proposal[4])\n",
-    "                xmax = np.int(iw * proposal[5])\n",
-    "                ymax = np.int(ih * proposal[6])\n",
+    "                xmin = np.int(initial_w * proposal[3])\n",
+    "                ymin = np.int(initial_h * proposal[4])\n",
+    "                xmax = np.int(initial_w * proposal[5])\n",
+    "                ymax = np.int(initial_h * proposal[6])\n",
     "                coords.append([xmin, ymin, xmax, ymax])\n",
+    "        \n",
+    "        print(\"Done getting coords and returning them\")\n",
+    "        return coords\n",
     "\n",
-    "        return coords, pr_image\n",
-    "    \n",
     "    def draw_outputs(self, coords, image):\n",
-    "    '''\n",
-    "    TODO: This method needs to be completed by you\n",
-    "    '''\n",
+    "        '''\n",
+    "        TODO: This method needs to be completed by you\n",
+    "        '''\n",
     "        for coord in coords:\n",
-    "                cv.rectangle(image, (coord[0], coord[1]), (coord[2], coord[3]), (232, 35, 244), 2)\n",
+    "                cv2.rectangle(image, (coord[0], coord[1]), (coord[2], coord[3]), (232, 35, 244), 2)\n",
+    "        \n",
     "        return image\n",
     "\n",
     "    def preprocess_outputs(self, outputs):\n",
-    "    '''\n",
-    "    TODO: This method needs to be completed by you\n",
-    "    '''\n",
+    "        '''\n",
+    "        TODO: This method needs to be completed by you\n",
+    "        '''\n",
     "        raise NotImplementedError\n",
     "\n",
     "    def preprocess_input(self, image):\n",
-    "    '''\n",
-    "    TODO: This method needs to be completed by you\n",
-    "    '''\n",
+    "        '''\n",
+    "        TODO: This method needs to be completed by you\n",
+    "        '''\n",
     "        pr_image = cv2.resize(image, (self.input_shape[3], self.input_shape[2]))\n",
     "        pr_image = pr_image.transpose((2,0,1)) #transpose layout from HWC to CHW\n",
     "        pr_image = pr_image.reshape(1, *pr_image.shape)\n",
-    "\n",
+    "        \n",
     "        return pr_image\n",
+    "\n",
     "\n",
     "def main(args):\n",
     "    model=args.model\n",
@@ -188,22 +202,26 @@
     "            if not ret:\n",
     "                break\n",
     "            counter+=1\n",
+    "            #Preprocess input image and draw to frame\n",
+    "            pr_image = pd.preprocess_input(frame)\n",
+    "            print(\"Getting coords and image\")\n",
+    "            coords = pd.predict(pr_image, initial_w, initial_h)\n",
+    "            frame = pd.draw_outputs(coords, frame)\n",
     "            \n",
-    "            coords, classes, image= pd.predict(frame)\n",
     "            num_people= queue.check_coords(coords)\n",
     "            print(f\"Total People in frame = {len(coords)}\")\n",
     "            print(f\"Number of people in queue = {num_people}\")\n",
     "            out_text=\"\"\n",
     "            y_pixel=25\n",
-    "            \n",
     "            for k, v in num_people.items():\n",
     "                out_text += f\"No. of People in Queue {k} is {v} \"\n",
     "                if v >= int(max_people):\n",
     "                    out_text += f\" Queue full; Please move to next Queue \"\n",
-    "                cv2.putText(image, out_text, (15, y_pixel), cv2.FONT_HERSHEY_COMPLEX, 1, (0, 255, 0), 2)\n",
+    "                cv2.putText(frame, out_text, (15, y_pixel), cv2.FONT_HERSHEY_COMPLEX, 1, (0, 255, 0), 2)\n",
     "                out_text=\"\"\n",
     "                y_pixel+=40\n",
-    "            out_video.write(image)\n",
+    "                \n",
+    "            out_video.write(frame)\n",
     "            \n",
     "        total_time=time.time()-start_inference_time\n",
     "        total_inference_time=round(total_time, 1)\n",
@@ -244,6 +262,13 @@
     "\n",
     "**Note**: As a reminder, if you need to make any changes to the Python script, you can come back to this workspace to edit and run the above cell to overwrite the file with your changes."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
