--- a/Step_2_Create_Job_Submission_Script.ipynb
+++ b/Step_2_Create_Job_Submission_Script.ipynb
@@ -16,9 +16,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing queue_job.sh\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile queue_job.sh\n",
     "#!/bin/bash\n",
@@ -31,7 +39,6 @@
     "DEVICE=$2\n",
     "# TODO: Create VIDEO variable\n",
     "VIDEO=$3\n",
-    "\n",
     "QUEUE=$4\n",
     "OUTPUT=$5\n",
     "# TODO: Create PEOPLE variable\n",
